few enhancements